fixed weird spacing on sign-up nav bar

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -38,6 +38,10 @@ nav {
     margin-right: auto;
 }
 
+.nav-button-container{
+    display: flex;
+}
+
 .navButton {
     display: block;
     width: 115px;
